-- fix mobile response

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
       background-size: cover;
     }
   </style>
+  <script src="%PUBLIC_URL%/tailwind.js"></script>
 </head>
 <body>
   <noscript>Satoshi Miner</noscript>
